@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T01:36:23Z",
-  "count" : 4,
-  "count_minmax" : [ 4, 9 ],
-  "count_decinc" : [ -5, +0 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 6 ],
-  "uniques_decinc" : [ -3, +0 ]
+  "timestamp" : "2022-05-20T16:25:43Z",
+  "count" : 3,
+  "count_minmax" : [ 3, 9 ],
+  "count_decinc" : [ -6, +0 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 6 ],
+  "uniques_decinc" : [ -4, +0 ]
 }
