@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-05-20T08:22:52Z",
+  "timestamp" : "2022-05-20T16:25:43Z",
   "count_outdated" : 193,
   "uniques_outdated" : 124,
   "count" : 262,
@@ -7,10 +7,10 @@
   "clones" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 9 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 6 ]
+      "count": 3,
+      "count_minmax": [ 3, 9 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 6 ]
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ]
+      "count": 6,
+      "count_minmax": [ 5, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 4, 5 ]
     }
   ]
 }
