@@ -1,11 +1,11 @@
 {
   "count": 69,
-  "uniques": 16,
+  "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 6,
+      "uniques": 5
     }
   ]
 }
