@@ -1,3 +1,10 @@
+2022-05-20T16:25:43Z:
+* notice: last 14d: unq all: 15 69
+* notice: prev accum: outdated-unq outdated-all / unq all: 124 193 / 154 262
+* notice: next accum: outdated-unq outdated-all / unq all: 124 193 / 154 262
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +5 +6 -0 -0 / 5 6
+* notice: changed dates: [2022-05-06 2022-05-20]
+
 2022-05-20T08:22:52Z:
 * notice: last 14d: unq all: 16 69
 * notice: prev accum: outdated-unq outdated-all / unq all: 124 193 / 150 257
